--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <ul>
   <li><a href="{{site.baseurl}}/about-us">Sobre el coro</a></li>
-  <li><a href="{{site.baseurl}}/song-book">Letras de canciones</a></li>
-  <li><a href="{{site.baseurl}}/audios">Audios</a></li>
+  <li><a href="{{site.baseurl}}/song-book">Libro de canciones</a></li>
+  <li><a href="{{site.baseurl}}/audio-clips">Audios</a></li>
   <li><a href="{{site.baseurl}}/concerts">Conciertos</a></li>
 </ul>
