added audio clip

--- a/_pages/audio-clips.html
+++ b/_pages/audio-clips.html
@@ -11,6 +11,9 @@ permalink: /audio-clips
     <li>Estribillo 1ª Voz</li>
     <li>Estribillo 2ª Voz</li>
     <li>Estribillo Chicos</li>
+    <audio controls>
+      <source src="/assets/audios/viva-la-vida-estribillo-chicos.mp3" type="audio/mpeg">
+    </audio>
     <li>1ª Letra 1ª Voz</li>
     <li>1ª Letra 2ª Voz</li>
     <li>1ª Letra Chicos</li>
