added more audios

--- a/_pages/audio-clips.html
+++ b/_pages/audio-clips.html
@@ -10,15 +10,31 @@ permalink: /audio-clips
   <ul>
     <li>Estribillo 1ª Voz</li>
     <li>Estribillo 2ª Voz</li>
+    <audio controls>
+      <source src="/assets/audios/viva-la-vida-estribillo-segunda-voz.mp3" type="audio/mpeg">
+    </audio>
     <li>Estribillo Chicos</li>
     <audio controls>
       <source src="/assets/audios/viva-la-vida-estribillo-chicos.mp3" type="audio/mpeg">
     </audio>
+    <audio controls>
+      <source src="/assets/audios/viva-la-vida-estribillo-chicos-2.mp3" type="audio/mpeg">
+    </audio>
     <li>1ª Letra 1ª Voz</li>
     <li>1ª Letra 2ª Voz</li>
+    <audio controls>
+      <source src="/assets/audios/viva-la-vida-1letra-segunda-voz.mp3" type="audio/mpeg">
+    </audio>
     <li>1ª Letra Chicos</li>
+
   </ul>
-  <li></li>
+  <li>Bo Yaho Haboker</li>
+  <ul>
+    <li>Segunda voz</li>
+    <audio controls>
+      <source src="/assets/audios/bo-yabo-segunda-voz.mp3" type="audio/mpeg">
+    </audio>
+  </ul>
   <li></li>
   <li></li>
   <li></li>
