added solamente una vez to the songbook

--- a/_pages/song-book.html
+++ b/_pages/song-book.html
@@ -10,5 +10,6 @@ permalink: /song-book
   <li><a href="">Quan tot s'enlaira</a></li>
   <li><a href="https://www.dropbox.com/s/h8ptr4u0rykl5qq/Bo%20Yavo%20Haboker?raw=1">Bo yabo haboker</a></li>
   <li><a href="https://www.dropbox.com/s/wit7a3hxft9bhwp/Vestida%20de%20Nit.pdf?raw=1">Vestida de nit</a></li>
-  <li><a href="https://www.dropbox.com/s/ndstawjjtwd12gt/Viva%20la%20vida.pdf?raw=1">viva la vida</a></li>
+  <li><a href="https://www.dropbox.com/s/ndstawjjtwd12gt/Viva%20la%20vida.pdf?raw=1">Viva la vida</a></li>
+  <li><a href="https://www.dropbox.com/s/eol8zykzpuvg80c/Solamente%20una%20vez.pdf?raw=1">Solamente una vez</a></li>
 </ul>
