--- a/_pages/audio-clips.html
+++ b/_pages/audio-clips.html
@@ -6,7 +6,7 @@ permalink: /audio-clips
 <h1>Clips de canciones</h1>
 
 <ul>
-  <li>Viva La vida</li>
+  <li><strong>Viva La vida</strong></li>
   <ul>
     <li>Estribillo 1ª Voz</li>
     <li>Estribillo 2ª Voz</li>
@@ -28,14 +28,21 @@ permalink: /audio-clips
     <li>1ª Letra Chicos</li>
 
   </ul>
-  <li>Bo Yaho Haboker</li>
+  <li><strong>Bo Yaho Haboker</strong></li>
   <ul>
     <li>Segunda voz</li>
     <audio controls>
       <source src="/assets/audios/bo-yabo-segunda-voz.mp3" type="audio/mpeg">
     </audio>
   </ul>
-  <li></li>
+  <li><strong>Quan tot s'enlaira</strong></li>
+  <ul>
+    <li>Segunda voz</li>
+    <audio controls>
+      <source src="/assets/audios/quan-tot-senlaira-segunda-voz.mp3" type="audio/mpeg">
+    </audio>
+
+  </ul>
   <li></li>
   <li></li>
   <li></li>
