--- a/_pages/concerts.html
+++ b/_pages/concerts.html
@@ -1,25 +1,73 @@
 ---
 layout: page
 title: Conciertos
-permalink: /concerts/
+permalink: /conciertos/
 ---
 
 <h1>Conciertos</h1>
 
+<h2>Proximas actuaciones</h2>
 
+<table class="concerts">
+  <tr>
+    <th>Sábado 25 mayo</th>
+    <th>Jueves 20 Junio</th>
+    <th>Domingo 23 Junio</th>
+  </tr>
+  <tr>
+    <td>
+      <dl>
+
+        <dt>Lugar</dt>
+        <dd>UPV. Sala Nexus</dd>
+        <dt>Hora</dt>
+        <dd>12:00</dd>
+        <dt>Precio</dt>
+        <dd>Gratis</dd>
+      </dl>
+    </td>
+    <td>
+      <dl>
+
+        <dt>Lugar</dt>
+        <dd>Sala Black Bottom. Ruzafa</dd>
+        <dt>Hora</dt>
+        <dd>19:30</dd>
+        <dt>Precio</dt>
+        <dd>Gratis</dd>
+      </dl>
+    </td>
+    <td>
+      <dl>
+
+        <dt>Lugar</dt>
+        <dd>Auditorio de Torrent</dd>
+        <dt>Hora</dt>
+        <dd>12:00</dd>
+        <dt>Precio</dt>
+        <dd>Gratis</dd>
+      </dl>
+    </td>
+  </tr>
+</table>
+
+
+
+</ul>
+<h2>Eventos pasados</h2>
 <ul>
-  <li><a href="{{site.baseurl}}/concerts/2019/">2019</a></li>
+  <li><a href="{{site.baseurl}}/conciertos/2019/">2019</a></li>
   <ul>
-    <li><a href="{{site.baseurl}}/concerts/2019/#fin-curso">Fin de curso</a></li>
-    <li><a href="{{site.baseurl}}/concerts/2019/#auditorio-torrent">Auditorio Torrent</li>
+    <li><a href="{{site.baseurl}}/conciertos/2019/#fin-curso">Fin de curso</a></li>
+    <li><a href="{{site.baseurl}}/conciertos/2019/#auditorio-torrent">Auditorio Torrent</li>
   </ul>
-  <li><a href="{{site.baseurl}}/concerts/2018/">2018</a></li>
+  <li><a href="{{site.baseurl}}/conciertos/2018/">2018</a></li>
   <ul>
-    <li><a href="{{site.baseurl}}/concerts/2018/#fin-curso">Fin de curso</a></li>
-    <li><a href="{{site.baseurl}}/concerts/2018/#navidad">Navidad</a></li>
+    <li><a href="{{site.baseurl}}/conciertos/2018/#fin-curso">Fin de curso</a></li>
+    <li><a href="{{site.baseurl}}/conciertos/2018/#navidad">Navidad</a></li>
   </ul>
-  <li><a href="{{site.baseurl}}/concerts/2017/">2017</a></li>
+  <li><a href="{{site.baseurl}}/conciertos/2017/">2017</a></li>
   <ul>
-    <li><a href="{{site.baseurl}}/concerts/2017/#navidad">Navidad</a></li>
+    <li><a href="{{site.baseurl}}/conciertos/2017/#navidad">Navidad</a></li>
   </ul>
 </ul>
