--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@ layout: default
   <li><a href="{{site.baseurl}}/about-us">Sobre el coro</a></li>
   <li><a href="{{site.baseurl}}/song-book">Libro de canciones</a></li>
   <li><a href="{{site.baseurl}}/audio-clips">Audios</a></li>
-  <li><a href="{{site.baseurl}}/concerts">Conciertos</a></li>
+  <li><a href="{{site.baseurl}}/conciertos">Conciertos</a></li>
 </ul>
