--- a/_pages/concerts/concerts-2018.html
+++ b/_pages/concerts/concerts-2018.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Conciertos 2018
-permalink: /concietos/2018/
+permalink: /conciertos/2018/
 ---
 
 <h1>Concierto 2018</h1>
