--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 <header>
   <!-- <h1><a href="{{ site.baseurl }}">{{ site.title }}</a></h1> -->
+  <img src="assets/img/avv2.png" width="200px" alt="logo">
   <h1>A Viva Veu &#119071;</h1>
 </header>
 
