updated with new media

--- a/_pages/concerts/concerts-2019.html
+++ b/_pages/concerts/concerts-2019.html
@@ -6,9 +6,44 @@ permalink: /conciertos/2019/
 
 <h1>Concierto 2019</h1>
 
+<h2 id="upv">Auditorio Alfons Roig (UPV)</h2>
+<h3>Temas</h3>
+<ul>
+  <li>Vestida de Nit</li>
+  <li>Viva la vida</li>
+  <li>Bo Yavo Haboker</li>
+  <li>Solamente una vez</li>
+</ul>
+<h3>Media</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/s6T7089S-Ws" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<h2 id="auditorio-torrent">Auditorio Torrent</h2>
+<img src="/assets/img/cante-amb-tu-cartel.jpg" class="w3-border w3-padding w3-right" width="200px" alt="cartel">
+<h3>Temas</h3>
+<ul>
+  <li>El Cuarto de tula</li>
+  <li>Vestida de Nit</li>
+  <li>Medley cine</li>
+  <li>Bo Yavo Haboker</li>
+  <li>Viva la vida</li>
+  <li>Cante amb tu</li>
+</ul>
+<h3>Media</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fUkc6U22P5A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DgxRlhE6wQI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gx9I2SXTBzA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-hUzramDDr8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/F99w8c_wDg4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
 <h2 id="fin-curso">Fin de curso</h2>
 <h3>Temas</h3>
-<h3>Media</h3>
-<h2 id="auditorio-torrent">Auditorio Torrent</h2>
-<h3>Temas</h3>
+<ul>
+  <li>El Cuarto de tula</li>
+  <li>Medley cine</li>
+  <li>Vestida de Nit</li>
+  <li>Bo Yavo Haboker</li>
+  <li>Viva la vida</li>
+</ul>
 <h3>Media</h3>
