--- a/_pages/song-book.html
+++ b/_pages/song-book.html
@@ -12,4 +12,5 @@ permalink: /song-book
   <li><a href="https://www.dropbox.com/s/wit7a3hxft9bhwp/Vestida%20de%20Nit.pdf?raw=1">Vestida de nit</a></li>
   <li><a href="https://www.dropbox.com/s/ndstawjjtwd12gt/Viva%20la%20vida.pdf?raw=1">Viva la vida</a></li>
   <li><a href="https://www.dropbox.com/s/eol8zykzpuvg80c/Solamente%20una%20vez.pdf?raw=1">Solamente una vez</a></li>
+  <li><a href="https://www.dropbox.com/s/ffydbp4kztraxca/Cante%20amb%20tu.pdf?raw=1">Cante amb tu</a></li>
 </ul>
