minor errors fixed

--- a/_pages/concerts.html
+++ b/_pages/concerts.html
@@ -13,8 +13,9 @@ permalink: /conciertos/
 <ul>
   <li><a href="{{site.baseurl}}/conciertos/2019/">2019</a></li>
   <ul>
+     <li><a href="{{site.baseurl}}/conciertos/2019/#upv">Auditorio Alfons Roig (UPV)</li>
+    <li><a href="{{site.baseurl}}/conciertos/2019/#auditorio-torrent">Cante amb tu(Auditorio Torrent)</li>
     <li><a href="{{site.baseurl}}/conciertos/2019/#fin-curso">Fin de curso</a></li>
-    <li><a href="{{site.baseurl}}/conciertos/2019/#auditorio-torrent">Auditorio Torrent</li>
   </ul>
   <li><a href="{{site.baseurl}}/conciertos/2018/">2018</a></li>
   <ul>
